test/classes/errors/nilability-assign/assign-oknil-shared-from-oknil-owned.chpl
//  lhs: shared?  rhs: owned?  ok

class MyClass {  var x: int;  }

var lhs: shared MyClass?;
var rhs: owned MyClass?;

lhs = rhs;


