test/classes/errors/nilability-assign/assign-oknil-shared-from-oknil-owned.good
assign-oknil-shared-from-oknil-owned.chpl:8: error: Cannot change class type in conversion from 'owned MyClass?' to 'shared MyClass'
